:books: cabeçalho cadastro concluído

--- a/Projeto Aurum/cadastro.html
+++ b/Projeto Aurum/cadastro.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Aurum Lab</title>
-    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="styles/cadastro.css">
     <link rel="stylesheet" href="styles/global.css">
 </head>
 <body>
-    <main class="container-cadastro">
-
-        <!-- Parte de cima -->
-        <header class="painel-topo">
-            <img src="assets/img/icone-logo.svg" alt="Logotipo" class="logo">
+    
+    <!-- Parte de cima -->
+    <header class="container-cadastro">
+        <div class="textos-cabecalho">
             <h1 class="titulo-cadastro">Cadastro</h1>
-            <p class="descricao">Crie uma nova conta de usuário para o Aurum Lab</p>
-        </header>
+            <p class="subtitulo-cadastro">Crie uma nova conta de usuário para o Aurum Lab</p>
+        </div>
+        <img src="assets/img/icone-logo.svg" alt="Logotipo" class="logo">
+    </header>
 
-    </main>
 </body>
 </html>
