:books: Página cadastro finalizada

--- a/Projeto Aurum/index.html
+++ b/Projeto Aurum/index.html
@@ -19,7 +19,7 @@
                 <li><a href="" class="link-ativo">Sobre</a></li>
                 <li><a href="" class="link-ativo">Dashboard</a></li>
                 <li>
-                    <a href="" class="item-login">
+                    <a href="login.html" class="item-login">
                     <img class="cadeado" src="assets/icon/lock.svg" alt="">  
                     Login 
                     </a>
