--- a/Projeto Aurum/cadastro.html
+++ b/Projeto Aurum/cadastro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="styles/cadastro.css">
     <link rel="stylesheet" href="styles/global.css">
 </head>
+
 <body>
-    
+
     <!-- Parte de cima -->
     <header class="container-cadastro">
         <div class="textos-cabecalho">
@@ -18,5 +20,34 @@
         <img src="assets/img/icone-logo.svg" alt="Logotipo" class="logo">
     </header>
 
+    <main>
+            <section class="formularios">
+
+                <form class="form-esquerda">
+                    <label for="name">Nome completo</label>
+                    <input type="text" id="name" placeholder="Seu nome" required>
+
+                    <label for="email" class="email-cadastro">E-mail:</label>
+                    <input type="email" id="email" placeholder="email@email.com" required>
+                </form>
+                
+                <form class="form-direita">
+                    <label for="senha">Senha</label>
+                      <input type="password" id="senha" placeholder="*********" required>
+
+                    <label for="senha" class="confirmar-senha-cadastro">Confirmar senha</label>
+                      <input type="password" id="senha" placeholder="confirme sua senha" required>
+                   <P class="instrucao-senha">A senha deve conter letras, números e caracteres especiais para maior segurança.</P>
+                </form>
+            </section>
+    </main>
+
+    <footer class="botoes">
+        <button type="submit" class="botao-entrar">ENTRAR</button>
+
+        <a href="login.html" class="link-voltar">Voltar</a>
+    </footer>
+
 </body>
+
 </html>
