--- a/Projeto Aurum/login.html
+++ b/Projeto Aurum/login.html
@@ -13,7 +13,7 @@
     <aside class="painel-esquerdo">
       <img src="assets/img/logo-vertical.svg" alt="Logotipo Aurum Lab" class="logo">
       <p class="descricao">Sistema de Monitoramento e Gerenciamento de Dispositivos!</p>
-      <a href="#" class="link-cadastro">Cadastre-se</a>
+      <a href="cadastro.html" class="link-cadastro">Cadastre-se</a>
     </aside>
 
     <!-- Lado direito -->
