--- a/Projeto Aurum/login.html
+++ b/Projeto Aurum/login.html
@@ -6,6 +6,7 @@
   <title>Aurum Lab - Login</title>
   <link rel="stylesheet" href="styles/login.css">
   <link rel="stylesheet" href="styles/global.css">
+  <script defer src="script.js"></script> <!--linkar o javaScript--> <!-- "defer" garente que o JS execute após o carregamento do HTML-->
 </head>
 <body>
   <main class="container-login">
